--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 .container{
     margin-bottom: 100px;
 }
+.logo{
+    height: 50px;
+}
 
 .heading{
     height: 150px;
@@ -18,6 +21,9 @@
 }
 a{
     text-decoration: none;
+}
+.see-all{
+    color: orange;
 }
 .bg-image{
     background-image: url(images/bg-1.png);
