--- a/style.css
+++ b/style.css
@@ -22,6 +22,9 @@
 a{
     text-decoration: none;
 }
+a:hover{
+    color: white;
+}
 .see-all{
     color: orange;
 }
@@ -36,5 +39,15 @@ a{
 }
 h3{
     margin-bottom: 20px;
+}
+.col-md-3{
+    border-radius: 10px;
+    width:160px;
+    height: 200px;
+    box-shadow: 5px 5px 10px gray;
+    margin: 0 auto;
+}
+.bag{
+    margin: 0 auto;
 }
 
